--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <section
         data-hx-trigger="load" 
         data-hx-swap="outerHTML" 
-        data-hx-get="index.testimonials-carousel.partial.html"       
+        data-hx-get="index.testimonials-carousel.partial.html">   
     </section>
 </body>
 </html>
